# RoBox

./: .gitignore  LICENSE  README.md  config.yaml  octagon_env.py  pyproject.toml  run_training.py
configs/: experiment.yaml
cuenca/: launch_training.sh
docs/: experiment_scientific_overview.md  run_training_and_pipeline_detailed_documentation.md
src/robox_octagon/: __init__.py  astar.py  attractor_analysis.py  attractor_model.py  env.py  experiment_runner.py  mappo.py  navigation.py  observations.py  pipeline.py  rewards.py  rl_comparison.py  social_analysis.py  solo_analysis.py  spaces.py  trial_types.py
